# Rosetta

./: .gitignore  .taurignore  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: clean-release.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_vector_indexes.sql  003_library_upgrade.sql  004_document_outputs.sql  005_provider_models.sql  006_mineru_processed_files.sql  007_chunk_persistence_and_index_jobs.sql  008_storage_compaction_markers.sql  009_field_extraction.sql
src-tauri/scripts/: zvec_bridge.py
src-tauri/src/: app_dirs.rs  app_updater.rs  chunking.rs  commands.rs  content_store.rs  database.rs  embedder.rs  extractor.rs  file_handler.rs  lib.rs  main.rs  mineru.rs  mineru_official.rs  mineru_process.rs  models.rs  rag_chat.rs  rate_limiter.rs  reranker.rs  retry.rs  runtime_logs.rs  settings.rs  sync_backup.rs  translator.rs  webdav.rs  window_appearance.rs  zvec.rs
src/components/: AppUpdaterProvider.tsx  DocumentPicker.tsx  LanguageSwitcher.tsx  Layout.tsx  ThemeToggle.tsx
src/hooks/: useDocumentContextMenu.ts  useLibrarySelection.ts  useLibraryViewState.ts  useReaderState.ts  useResizableRightPanel.ts  useSidebarPreference.ts
src/i18n/: index.ts  mergeLocale.ts  types.d.ts
src/lib/: api.ts  chat.ts  markdown-assets.ts  mineru-layout.ts  providers.ts  reader-layout.ts  storage-keys.ts  sync-backup.ts  theme.ts  (+1 more)
(+95 files in other folders)
