[package]
name = "rosetta"
version = "0.1.0"
description = "Rosetta - A comprehensive PDF translation and management tool"
authors = ["Rosetta Team"]
edition = "2021"

[lib]
name = "rosetta_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled", "blob"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
